python-sample/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-sample
  name: python-sample
  namespace: python-sample
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: python-sample
    deployment: python-sample
  type: ClusterIP
